@@ -69,7 +69,7 @@ extern "C" DCL_EXPORT MUX_RESULT mux_Register(void)
     // Use of CLog provided by netmux.
     //
     ILog *pILog = NULL;
-    MUX_RESULT mr = mux_CreateInstance(CID_Log, InProcessServer, IID_ILog, (void **)&pILog);
+    MUX_RESULT mr = mux_CreateInstance(CID_Log, NULL, InProcessServer, IID_ILog, (void **)&pILog);
     if (MUX_SUCCEEDED(mr))
     {
 #define LOG_ALWAYS      0x80000000  /* Always log it */
@@ -190,8 +190,15 @@ UINT32 CSampleFactory::Release(void)
     return m_cRef;
 }
 
-MUX_RESULT CSampleFactory::CreateInstance(UINT64 iid, void **ppv)
+MUX_RESULT CSampleFactory::CreateInstance(mux_IUnknown *pUnknownOuter, UINT64 iid, void **ppv)
 {
+    // Disallow attempts to aggregate this component.
+    //
+    if (NULL != pUnknownOuter)
+    {
+        return MUX_E_NOAGGREGATION;
+    }
+
     CSample *pSample = NULL;
     try
     {
